# multicam_imu_calib

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
config/: example_config.yaml  single_camera_intrinsics.yaml  stereo_camera.yaml  stereo_camera_imu.yaml
include/multicam_imu_calib/: apriltag_board_target.hpp  calibration.hpp  camera.hpp  detection.hpp  factor_key.hpp  front_end.hpp  imu.hpp  imu_data.hpp  imu_value_keys.hpp  logging.hpp  multicam_imu_calib.hpp  optimizer.hpp  stamped_attitude.hpp  stamped_imu_factor_keys.hpp  stamped_imu_value_keys.hpp  target.hpp  utilities.hpp  value_key.hpp
include/multicam_imu_calib/gtsam_extensions/: Cal3DS3.h  Cal3FS2.h
launch/: node.launch.py
multicam_imu_calib/: .gitignore  CMakeLists.txt  README.md  package.xml
multicam_imu_calib/config/: example_config.yaml  sim.yaml  single_camera_intrinsics.yaml  stereo_camera.yaml  stereo_camera_imu.yaml  stereo_camera_imu_minimal.yaml
multicam_imu_calib/include/multicam_imu_calib/: apriltag_board_target.hpp  calibration.hpp  calibration_component.hpp  camera.hpp  debug_level.hpp  detection_draw.hpp  detector_loader.hpp  diagnostics.hpp  enhanced_player.hpp  factor_key.hpp  front_end.hpp  front_end_component.hpp  imu.hpp  init_pose.hpp  intrinsics.hpp  multicam_imu_calib.hpp  optimizer.hpp  stamped_imu_value_keys.hpp  target.hpp  utilities.hpp
multicam_imu_calib/include/multicam_imu_calib/gtsam_extensions/: Cal3DS3.h  Cal3FS2.h
multicam_imu_calib/launch/: calibration.launch.py  frontend.launch.py  node.launch.py
multicam_imu_calib/src/: apriltag_board_target.cpp  calib_to_camera_info.py  calibrate_from_bag.cpp  calibration.cpp  calibration_component.cpp  calibration_node.cpp  camera.cpp  debug_level.cpp  detect.cpp  detection_draw.cpp  detection_draw_node.cpp  detector_loader.cpp  diagnostics.cpp  diagnostics.py  enhanced_player.cpp  front_end.cpp  front_end_component.cpp  imu.cpp  imu_data.cpp  init_pose.cpp  multicam_imu_calib.cpp  optimizer.cpp  target.cpp  utilities.cpp
multicam_imu_calib/test/: camera_test.cpp  imu_test.cpp  kinematics_test.cpp  make_rig_poses.hpp  single_cam_equidistant.yaml  single_cam_imu.yaml  single_cam_radtan.yaml  stereo_cam_equidistant.yaml  stereo_cam_radtan.yaml
multicam_imu_calib_msgs/: CMakeLists.txt  README.md  package.xml
multicam_imu_calib_msgs/msg/: Detection.msg  DetectionArray.msg  Marker.msg  Target.msg  TargetArray.msg
sim/: README.md  bridge.yaml  camera.sdf  control_sim.py  tag36_11_00001.dae  tag36_11_00003.dae  tag36_11_00004.dae  tag36_11_00005.dae  world.sdf
sim/arm/: arm.sdf  model.config
sim/board_00/: board_00.sdf  model.config  tag36_11_00000.dae  tag36_11_00002.dae
sim/board_04/: board_04.sdf  model.config  tag36_11_00006.dae  tag36_11_00007.dae
sim/crooked_rig/: crooked_rig.sdf  model.config
sim/rig/: model.config  rig.sdf
src/: apriltag_board_target.cpp  calibrate_from_bag.cpp  calibration.cpp  camera.cpp  detector_loader.cpp  diagnostics.py  front_end.cpp  imu.cpp  init_pose.cpp  multicam_imu_calib.cpp  multicam_imu_calib_node.cpp  optimizer.cpp  target.cpp  utilities.cpp
src/gtsam_extensions/: Cal3DS3.cpp  Cal3FS2.cpp
stereo_camera_output/: projections.txt
test/: camera_test.cpp  camera_test_1.yaml  imu_test.cpp  kinematics_test.cpp  make_rig_poses.cpp  single_cam_equidistant.yaml  single_cam_imu.yaml  single_cam_radtan.yaml  stereo_cam_radtan.yaml
