<?xml version="1.0"?>
<package format="3">
  <name>multicam_imu_calib</name>
  <version>1.0.0</version>
  <description>ROS2 package for multi-camera and camera-to-imu calibration</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>

  <!-- ROS2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>apriltag_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>gtsam</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
