<?xml version="1.0"?>
<package format="3">
  <name>multicam_imu_calib</name>
  <version>1.0.0</version>
  <description>ROS2 package for multi-camera and camera-to-imu calibration</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>apriltag_msgs</depend>
  <depend>apriltag_detector</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>gtsam</depend>
  <depend>image_transport</depend>
  <depend>multicam_imu_calib_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>

  <depend>ament_cmake_auto</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
